# udger-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
benches/: bench.rs
ci/: test
cmake/: boost.cmake  hyperscan.cmake  macros.cmake  pcre.cmake  projects.cmake  ragel.cmake
src/: ffi.rs  lib.rs  udger.h
src/udger/: mod.rs  regex_sequence.rs  sql.rs  word_detector.rs
