[package]
name = "udger-rust"
version = "0.2.0"
edition = "2018"
authors = ["Jack Liar"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "udger"

[dependencies]
anyhow = "1.0"
# uchardet = "2.0.4"
clru = "0.5"
hyperscan = { version = "0.2", features = ["chimera"] }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
regex = "1.4"
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"
rand = "*"

[features]
icon = []
homepage = []
url = []
application = []
