[package]
name = "udger-rust"
version = "0.2.0"
edition = "2021"
authors = ["Jack Liar"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "udger"

[dependencies]
anyhow = "1.0"
# uchardet = "2.0.4"
clru = "0.6"
hyperscan = { version = "0.3", features = ["chimera"] }
lazy_static = "1.4.0"
libc = "0.2"
regex = "1.7"
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"

[features]
application = []
homepage = []
icon = []
url = []
