[package]
name = "udger-rust"
version = "0.2.0"
edition = "2021"
authors = ["Jack Liar"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "udger"

[dependencies]
anyhow = "1"
# uchardet = "2.0.4"
clru = "0.6"
hyperscan = { version = "0.3", features = ["chimera"] }
lazy_static = "1"
libc = "0.2"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.9"

[features]
application = []
homepage = []
icon = []
url = []
